# telegram-webapp-sdk

./: .gitignore  .rultor.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile.toml  README.md  RELEASE.md  REUSE.toml  TELEGRAM_API.md  WEBAPP_API.md  build.rs  cliff.toml  codecov.yml  deny.toml  release-plz.toml  telegram-webapp.toml
.config/: nextest.toml
.github/: ci.yml  dependabot.yml  format.yml
.github/workflows/: ci.yml  release-plz.yml  release.yml  reusable-ci.yml  site.yml  wiki.yml
.hooks/: pre-commit
.reuse/: dep5
.scripts/: release.sh
LICENSES/: CC0-1.0.txt
demo/: Cargo.toml  README.md  index.html  style.css
demo/src/: components.rs  main.rs  pages.rs  router.rs
demo/src/components/: dev_menu.rs  display_data.rs  nav_link.rs  page.rs  page_layout.rs  rgb.rs
demo/src/pages/: burger_king.rs  index.rs  init_data.rs  launch_params.rs  theme_params.rs
examples/bots/: python_bot.py
examples/bots/rust_bot/: .env.example  .gitignore  Cargo.toml  README.md
examples/bots/rust_bot/src/: lib.rs  main.rs
examples/integration/: README.md
examples/integration/backend/: Cargo.toml
examples/integration/backend/src/: lib.rs  main.rs
examples/integration/frontend/: Cargo.toml  Trunk.toml  index.html
examples/integration/frontend/src/: lib.rs
examples/vanilla/: Cargo.toml  index.html  style.css
examples/vanilla/src/: main.rs  ui.rs
site/: build.py  landing.html
src/: api.rs  core.rs  leptos.rs  lib.rs  logger.rs  macros.rs  mock.rs  pages.rs  router.rs  utils.rs  webapp.rs  yew.rs
src/api/: accelerometer.rs  biometric.rs  cloud_storage.rs  device_orientation.rs  device_storage.rs  events.rs  gyroscope.rs  haptic.rs  location.rs  location_manager.rs  secure_storage.rs  settings_button.rs  theme.rs  user.rs  viewport.rs
src/core/: context.rs  init.rs  interop.rs  safe_context.rs  types.rs
src/core/interop/: verify.rs
src/core/types/: chat.rs  download_file_params.rs  init_data.rs  init_data_internal.rs  launch_params.rs  sent_web_app_message.rs  theme_params.rs  user.rs  web_app_data.rs  web_app_info.rs  webhook_info.rs  write_access_allowed.rs
src/dom/: document.rs  element.rs  event.rs  mod.rs
src/leptos/: back_button.rs  bottom_button.rs  safe_area.rs  settings_button.rs  theme.rs  viewport.rs
src/mock/: config.rs  data.rs  init.rs  utils.rs
src/utils/: check_env.rs  validate_init_data.rs
src/webapp/: buttons.rs  core.rs  dialogs.rs  events.rs  lifecycle.rs  navigation.rs  permissions.rs  theme.rs  types.rs  viewport.rs
src/yew/: back_button.rs  bottom_button.rs  safe_area.rs  settings_button.rs  theme.rs  viewport.rs
telegram-webapp-sdk-macros/: Cargo.toml
telegram-webapp-sdk-macros/src/: lib.rs
tests/: closing_confirmation.rs  init_sdk.rs  leptos.rs  macros.rs  validate_init_data.rs
tools/update-readme/: Cargo.toml
tools/update-readme/src/: main.rs  version_probe.rs
wiki/: Examples-en.md  Framework-Integration-en.md  Home-en.md  Installation-en.md  Quick-Start-en.md  Testing-en.md  WebApp-API-en.md  WebApp-API-ru.md  _Sidebar.md  Быстрый-старт.md  Главная.md  Интеграция.md  Примеры.md  Тестирование.md  Установка.md
