[package]
name = "telegram-webapp-sdk"
version = "0.9.0"
rust-version = "1.95.0"
edition = "2024"
description = "Telegram WebApp SDK for Rust"
license = "MIT"
repository = "https://github.com/RAprogramm/telegram-webapp-sdk"
readme = "README.md"
documentation = "https://docs.rs/telegram-webapp-sdk"
keywords = ["telegram", "webapp", "wasm", "sdk"]
categories = ["web-programming", "wasm"]

[workspace.package]
rust-version = "1.95.0"

[workspace.dependencies]
inventory = "0.3"
masterror = "0.27"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
serde_urlencoded = "0.7"
once_cell = "1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Event",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlImageElement",
  "Node",
  "EventTarget",
  "MouseEvent",
  "console",
  "Location",
  "CssStyleDeclaration",
] }
percent-encoding = "2"
masterror = { workspace = true }
regex = "1"
reqwest = { version = "0.13", default-features = false, features = [
  "blocking",
] }
urlencoding = { version = "2", optional = true }
inventory = { workspace = true, optional = true }
toml = "1"

[build-dependencies]
version_check = "0.9"

[dependencies.yew]
version = "0.23"
optional = true
default-features = false
features = ["csr"]

[dependencies.leptos]
version = "0.8"
optional = true
default-features = false
features = ["csr"]

[dependencies.send_wrapper]
version = "0.6"
optional = true

[features]
default = []

macros = ["dep:inventory"]
yew = ["dep:yew"]
leptos = ["dep:leptos", "dep:send_wrapper"]
mock = ["dep:urlencoding"]
full = ["macros", "yew", "leptos", "mock"]

[workspace]
members = ["demo", "examples/vanilla", "examples/bots/rust_bot", "examples/integration/backend"]
default-members = ["."]
exclude = ["examples/integration/frontend"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"
