[package]
name = "demo"
version = "0.2.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "HtmlElement",
  "History",
  "Location",
  "Event",
  "EventTarget",
  "CustomEvent",
  "CustomEventInit",
  "console",
  "Text",
] }
telegram-webapp-sdk = { path = "../", features = ["mock", "macros"] }
masterror = "0.3"
inventory = "0.3.21"

[[bin]]
name = "demo"
path = "src/main.rs"
test = false
bench = false
