[package]
name = "vanilla-example"
version = "0.2.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlInputElement",
    "Event",
    "EventTarget",
    "FocusEvent",
    "InputEvent",
    "MouseEvent",
    "console",
    "Text",
    "DomRect",
] }
serde_json = "1"
console_error_panic_hook = "0.1"
telegram-webapp-sdk = { path = "../..", features = ["mock"] }

[dependencies.trunk]
version = "0.21"
optional = true

[[bin]]
name = "vanilla"
path = "src/main.rs"
test = false
bench = false
