[package]
name = "update-readme"
version = "0.0.0"
edition = "2024"
rust-version.workspace = true
publish = false

[[bin]]
name = "update-readme"
path = "src/main.rs"

[dependencies]
masterror = { workspace = true }
serde = { version = "1", features = ["derive"] }
regex = "1"
reqwest = { version = "0.13", default-features = false, features = [
  "blocking",
] }
percent-encoding = "2"
toml = "1"
