[package]
name = "webapp-integration-backend"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
masterror = "0.27"
chrono = { version = "0.4", features = ["serde"] }